--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   </head>
   <body>
     <h1>The <span id="colorDisplay">RGB</span>Color Game</h1>
-    <div>
+    <div id="stripe">
+      <button id="reset">New Colors</button>
       <span id="message"></span>
+      <button id="easyBtn" class="selected">Easy</button>
+      <button id="hardBtn" class="selected">Hard</button>
     </div>
     <div id="container">
       <div class="square"></div>
