--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <link rel="stylesheet" href="colorGame.css" />
   </head>
   <body>
-    <h1>The <span id="colorDisplay">RGB</span>Color Game</h1>
+    <h1>
+      The
+      <br />
+      <span id="colorDisplay">RGB</span>
+      <br />
+      Color Game
+    </h1>
     <div id="stripe">
       <button id="reset">New Colors</button>
       <span id="message"></span>
-      <button id="easyBtn" class="selected">Easy</button>
-      <button id="hardBtn" class="selected">Hard</button>
+      <button class="mode">Easy</button>
+      <button class="mode selected">Hard</button>
     </div>
     <div id="container">
       <div class="square"></div>
